feat (frontend-react): add card view

--- a/alex-fitness-demo-frontend-framework7-react/src/index.html
+++ b/alex-fitness-demo-frontend-framework7-react/src/index.html
@@ -16,7 +16,7 @@
   <meta name="theme-color" content="#212121">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>My App</title>
+  <title>Alex Fitness Demo</title>
   
   
   
